--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,34 @@ jobs:
     - name: Build DMG
       run: bash build.sh
       
-    - name: Upload Release Asset
+    - name: Upload Release Asset (macOS)
       uses: softprops/action-gh-release@v2
       with:
         files: dist/*.dmg
+
+  build-windows:
+    name: Build & Release Windows
+    runs-on: windows-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+        cache: 'pip'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
+    - name: Build EXE
+      run: pyinstaller --noconfirm --onefile --windowed --name "AI-Humanizer" "ai文本人性化.py"
+      
+    - name: Upload Release Asset (Windows)
+      uses: softprops/action-gh-release@v2
+      with:
+        files: dist/AI-Humanizer.exe
